# ai-corporation

./: .dockerignore  .env.example  .env.macmini.example  .env.runtime.example  .gitignore  Dockerfile  Makefile  README.md  STATUS.md  alembic.ini  docker-compose.postgres.yml  docker-compose.r8-acceptance.yml  docker-compose.site-pilot.yml  docker-compose.yml  pyproject.toml  pytest_optional_profiles.py
docs/: demo_tender_operator_agent.md
migrations/: env.py
pytest_optional_profiles/: __init__.py
scripts/: check_company_agent_dry_run_setup.py  diagnose_eis_soap_matrix.py  diagnose_zakupki_soap.py  export_company_agent_context.py  export_company_workflow_route.py  export_hermes_company_manifest.py  import_vendor_list.py  probe_eis_extract_token_mac.py  run_commercial_mvp_v1_demo.py  run_commercial_prebid_demo.py  run_controlled_pilot_dry_run.py  run_design_partner_pilot_dry_run.py  run_partner_tender_folder.py  run_site_pilot_stack.sh  run_tender_operator_pilot.py
src/: main.py
tests/: conftest.py  test_broader_internal_steady_state_cycle_one.py  test_broader_internal_steady_state_cycle_two.py  test_broader_internal_steady_state_exit_review.py  test_broader_internal_steady_state_governance.py  test_broader_internal_usage_exit_review.py  test_broader_internal_usage_governance.py  test_broader_internal_usage_stability_check.py  test_broader_internal_usage_wave_one.py  test_canonical_snapshot.py  test_commercial_bid_readiness_c5.py  test_commercial_mvp_v1_pilot_package_c6.py  test_commercial_operator_console_c4.py  test_commercial_prebid_demo_c2.py  test_controlled_llm_prebid_c3.py  test_controlled_llm_tender_operator_workflow.py  test_controlled_pilot_dry_run_cp5.py  test_controlled_pilot_evidence_cp3.py  test_controlled_pilot_final_review_cp6.py  test_controlled_pilot_l1_confirmation_wave.py  test_controlled_pilot_l1_execution.py  test_controlled_pilot_l1_exit_review.py  test_controlled_pilot_l1_governance.py  test_controlled_pilot_operator_workflow_cp2.py  test_controlled_pilot_sales_materials_cp4.py  test_controlled_pilot_scenarios_cp1.py  test_deal_scoring_recommendations.py  test_deal_scoring_risk_model.py  test_deal_scoring_scoring.py  test_deferred_runtime_planning_exit_review.py  test_deferred_runtime_planning_governance.py  test_deferred_runtime_planning_m049_m050.py  test_deferred_runtime_planning_m052_m055.py  test_design_partner_dry_run_dp6.py  test_document_roles.py  test_eis_soap_gateway.py  (+122 more)
(+1419 files in other folders)
