[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-corporation"
version = "0.1.0"
description = "Sprint 1 foundation for the AI Corporation tender business platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "openpyxl>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "sqlalchemy>=2.0.30,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "postgres: optional integration tests that require a PostgreSQL database with pgvector extension",
]
