[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-corporation"
version = "0.1.0"
description = "Sprint 1 foundation for the AI Corporation tender business platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "openpyxl>=3.1,<4.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "reportlab>=4.2,<5.0",
  "sqlalchemy>=2.0.30,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.ruff]
target-version = "py311"
exclude = [".venv", "data", "company_agent_runs"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: optional integration tests that are disabled in the default offline profile",
  "network: optional tests that require live network access and are disabled by default",
  "llama_cpp: optional tests for llama.cpp-specific integration points, disabled by default",
  "live_smoke: optional live smoke tests for the Mac mini/runtime contour, disabled by default",
  "postgres: optional integration tests that require a PostgreSQL database with pgvector extension",
]
